--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-auto": "^3.1.1",
+    "@sveltejs/kit": "^2.5.2",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "sass": "^1.70.0",
-    "svelte": "^5.0.0-next.1",
-    "svelte-check": "^3.6.0",
+    "sass": "^1.71.1",
+    "svelte": "5.0.0-next.69",
+    "svelte-check": "^3.6.5",
     "tailwindcss": "^3.4.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
   },
   "type": "module",
   "dependencies": {
