--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
   },
   "type": "module",
   "dependencies": {
-    "@fontsource-variable/overpass-mono": "^5.0.16",
-    "@fontsource-variable/rubik": "^5.0.20",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10"
+    "@builder.io/partytown": "^0.10.1"
   }
 }
