--- a/package.json
+++ b/package.json
@@ -4,28 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "partytown":"partytown copylib static/~partytown",
-    "build": "pnpm partytown && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.1.1",
-    "@sveltejs/kit": "^2.5.2",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "sass": "^1.71.1",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.5.6",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "sass": "^1.75.0",
     "svelte": "5.0.0-next.69",
-    "svelte-check": "^3.6.5",
-    "tailwindcss": "^3.4.1",
+    "svelte-check": "^3.6.9",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9"
   },
-  "type": "module",
-  "dependencies": {
-    "@builder.io/partytown": "^0.10.1"
-  }
+  "type": "module"
 }
