--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/kit": "^2.5.6",
-    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/adapter-node": "^5.2.0",
+    "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "sass": "^1.75.0",
-    "svelte": "5.0.0-next.69",
-    "svelte-check": "^3.6.9",
-    "tailwindcss": "^3.4.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.9"
+    "postcss": "^8.4.39",
+    "sass": "^1.77.6",
+    "svelte": "5.0.0-next.168",
+    "svelte-check": "^3.8.4",
+    "tailwindcss": "^3.4.4",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.2"
   },
   "type": "module"
 }
